feat: adding user cruds
