# src/core/dtos/User/CreateUserDto.ts
@@ -1,0 +1,6 @@
+export class CreateUserDto {
+    name!: string;
+    email!: string;
+    password!: string;
+    role!: string;
+}
