# src/core/dtos/User/UpdateUserDto.ts
@@ -1,0 +1,6 @@
+export class UpdateUserDto {
+    name?: string;
+    email?: string;
+    password?: string;
+    role?: string;
+}
